src/test/compile-fail/mod-name-non-str.rc
// error-pattern: expected string literal
// Issue #1028
mod ncurses = x;